force-app/main/default/objects/Work_Breakdown_Structure__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Record type is not Engineering Unit or Sub-Contractor</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Engineering Unit, Sub-Contractor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Work Breakdown Structures</relationshipLabel>
    <relationshipName>Work_Breakdown_Structures</relationshipName>
    <type>Lookup</type>
</CustomField>