force-app/main/default/objects/Work_Breakdown_Structure__c/fields/Construction__c.field-meta.xml
<CustomField>
    <fullName>Construction__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Construction</label>
    <referenceTo>Construction__c</referenceTo>
    <relationshipLabel>Work Breakdown Structures</relationshipLabel>
    <relationshipName>Work_Breakdown_Structures</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>