force-app/main/default/objects/Work_Breakdown_Structure__c/fields/IsSynced__c.field-meta.xml
<CustomField>
    <fullName>IsSynced__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsSynced</label>
    <type>Checkbox</type>
</CustomField>