force-app/main/default/objects/Work_Breakdown_Structure__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Work Breakdown Structures</relationshipLabel>
    <relationshipName>Work_Breakdown_Structures</relationshipName>
    <type>Lookup</type>
</CustomField>