force-app/main/default/objects/Work_Breakdown_Structure__c/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <label>Total Amount</label>
    <summarizedField>Work_Breakdown_Structure_Item__c.Total_Amount_Price__c</summarizedField>
    <summaryForeignKey>Work_Breakdown_Structure_Item__c.Work_Breakdown_Structure__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>