force-app/main/default/objects/Work_Breakdown_Structure__c/fields/Total_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Total_Quantity__c</fullName>
    <label>Total Quantity</label>
    <summaryForeignKey>Work_Breakdown_Structure_Item__c.Work_Breakdown_Structure__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>